# rafting

./: Cargo.toml  LICENSE  README.md  build.rs
config/: cluster_config.yaml
proto/: raft.proto
src/: args.rs  config.rs  errors.rs  lib.rs  main.rs
src/raft/: display.rs  mod.rs  node.rs  raft_log.rs  raft_node.rs  raft_server.rs  server.rs
src/rpc/: client.rs  mod.rs  peer.rs  rpc_client.rs  rpc_peer_network.rs  rpc_server.rs  server.rs
src/web/: mod.rs  web_server.rs
tests/: test_cluster_config.yaml
