[package]
name = "rafting"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1.2", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
futures = "0.3"
futures-util = "0.3"
serde = "1.0"
serde_derive = "1.0"
prost = "0.12"
tonic = "0.10"

[dev-dependencies]
pretty_assertions = "1.3"
test-log = { version = "0.2", features = ["trace", "tracing-subscriber"] }

[build-dependencies]
tonic-build = "0.10"
